<resources>
    <string name="app_name">Smart hanger</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="connectBtn">Connect Wristband</string>
    <string name="intro_text"><![CDATA[Welcome User! <br/> Do you have a hard time selecting what clothes you
        should where? We are now introducing our new system SmartHanger.
        <br/><br/> Use the <strong>button</strong> below to connect your wristband with the system and start selecting. The system
        will become more accurate at selecting clothes the longer you use it.]]></string>
    <string name="events_text">Events</string>
    <string name="search_hint">Event Location</string>
    <string name="btnSend_text">Send Location Data</string>
    <string name="btnSend1_text">Add Event</string>
    <string name="date_hint">dd/MM/yyyy</string>
    <string name="time_hint">hh:mm</string>
    <string name="system_off">off</string>
    <string name="picking_clothes">Picking \nClothes…</string>
    <string name="welcome_user">Welcome User</string>
    <string name="system_status">SYSTEM STATUS</string>
    <string name="weekly">Weekly</string>
    <string name="month_year">Feb 2021</string>
    <string name="event_add_text">Event +</string>
    <string name="refresh">Refresh</string>
</resources>