<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/green">

        <View
            android:id="@+id/bottom_white"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/main_custom" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/bottom_white"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/maven_pro_bold"
            android:gravity="center"
            android:lines="1"
            android:text="@string/system_status"
            android:textColor="@color/off.green"
            android:textSize="45sp" />

        <android.widget.ToggleButton
            android:id="@+id/btnPick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/grey_btn"
            android:fontFamily="@font/maven_pro_medium"
            android:paddingLeft="50dp"
            android:paddingTop="20dp"
            android:paddingRight="50dp"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textOff="@string/system_off"
            android:textOn="@string/picking_clothes"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/light"
            android:layout_width="300dp"
            android:layout_height="171dp"
            android:layout_below="@+id/status"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:background="@drawable/hangeroff">

        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="10dp">

            <android.widget.Button
                android:id="@+id/btnEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/black_btn"
                android:text="@string/events_text"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/maven_pro_medium"
                android:gravity="center|left"
                android:text="@string/welcome_user"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>