<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evenData">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity"
            tools:ignore="FragmentTagUsage" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back">
        </ImageView>

        <ImageView
            android:id="@+id/home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_home"
            android:layout_toRightOf="@+id/back">
        </ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/searchBar"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_border">

        <ImageView
            android:id="@+id/ic_magnify"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_magnify" />

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ic_magnify"
            android:background="@null"
            android:fontFamily="@font/maven_pro"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ic_gbs"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_gps" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/evenData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchBar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro"
            android:hint="@string/date_hint"
            android:inputType="datetime"
            android:maxLength="10" />

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro"
            android:hint="@string/time_hint"
            android:inputType="time"
            android:maxLength="5" />

        <android.widget.Button
            android:id="@+id/btnAddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_btn"
            android:fontFamily="@font/maven_pro"
            android:text="@string/btnSend1_text"
            android:textColor="@color/white" />
    </LinearLayout>


    <android.widget.Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/green_btn"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/btnSend_text"
        android:textColor="@color/white" />

</RelativeLayout>